--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .about {
   background-color: var(--bg-color);
   text-align: center;
@@ -57,7 +59,7 @@
     margin-top: 40px;
     font-size: 18px;
 
-    p{
+    p {
       margin-bottom: 20px;
       text-align: left;
     }
@@ -65,5 +67,17 @@
     .buttonWrapper {
       margin: 40px 0;
     }
+  }
+}
+
+.buttonWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    flex-direction: row;
   }
 }
