--- a/src/components/Sections/Lessons/Lessons.module.scss
+++ b/src/components/Sections/Lessons/Lessons.module.scss
@@ -204,3 +204,15 @@
   color: var(--pink-color);
   line-height: 1;
 }
+
+.buttonWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    flex-direction: row;
+  }
+}
