--- a/src/components/Sections/Testimonials/Testimonials.module.scss
+++ b/src/components/Sections/Testimonials/Testimonials.module.scss
@@ -4,7 +4,6 @@
   background-color: var(--main-bg);
 }
 
-
 .titleHidden {
   position: absolute;
   white-space: nowrap;
@@ -192,4 +191,16 @@
 
 .modalParagraph {
   margin-bottom: 1rem;
+}
+
+.buttonWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    flex-direction: row;
+  }
 }
