--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -109,21 +109,19 @@ img {
 }
 
 .section {
-  display: inline-block;
-  vertical-align: middle;
-  padding: 16px 0;
+  padding: 32px 0;
   display: flex;
   flex-direction: column;
   gap: 16px;
 
   @media screen and (min-width: $breakpoint-tablet) {
     display: block;
-    // padding: 32px 0;
-    min-height: calc(85vh);
+    padding: 48px 0;
+    // min-height: calc(75vh);
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    // padding: 64px 0;
+    padding: 64px 0;
   }
 
   /* outline: 1px solid green; */
