--- a/src/components/Sections/Lessons/Lessons.module.scss
+++ b/src/components/Sections/Lessons/Lessons.module.scss
@@ -211,6 +211,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  margin-bottom: 2rem;
 
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
