--- a/src/components/Sections/Testimonials/Testimonials.module.scss
+++ b/src/components/Sections/Testimonials/Testimonials.module.scss
@@ -199,6 +199,8 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  margin-bottom: 2rem;
+
 
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
