--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,9 @@
 @import "./variables.scss";
 
 :root {
-  --header-bg: #fdf8ee;
+  // --header-bg: #fdf8ee;
+  --header-bg: #d97e9f;
+
   --footer-bg: #fdf8ee;
   --main-bg: #fdf8ee;
 
