--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -5,7 +5,7 @@
   font-weight: 400;
   font-style: italic;
   font-size: 2rem;
-  color: var(--pink-color);
+  color: var(--text-color-light);
   transition: all 0.3s ease;
   z-index: 5;
 
