--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -1,11 +1,15 @@
 @import "../../styles/variables.scss";
 
 .container {
-  max-width: 800px;
+  max-width: 90%;
   margin: 0 auto;
   padding: 0 20px 20px;
   background-color: var(--main-bg);
   text-align: center;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    max-width: 80%;
+  }
 }
 
 .card {
