--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -19,6 +19,7 @@
   font-size: 28px;
   font-weight: bold;
   text-align: center;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
 }
 
 .pageSubtitle {
