--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -20,13 +20,21 @@
 
     .feature {
       background-color: var(--white-color);
-      padding: 20px;
+      padding: 1rem;
       border-radius: 12px;
       box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 
+      @media screen and (min-width: $breakpoint-tablet) {
+        padding: 2rem;
+      }
+
       h3 {
-        font-size: 20px;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
         margin-bottom: 8px;
+        color: var(--pink-color);
+        font-size: 20px;
       }
 
       p {
@@ -39,6 +47,12 @@
         margin-top: 8px;
 
         li {
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+          margin-bottom: 0.3rem;
+
+
           font-size: 16px;
           line-height: 1.4;
         }
@@ -71,4 +85,18 @@
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
   }
+}
+
+.icon {
+  vertical-align: text-bottom;
+  font-size: 2rem;
+  color: var(--pink-color);
+  transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.smallIcon {
+  vertical-align: text-bottom;
+  font-size: 1.2rem;
+  color: var(--pink-color);
+  transition: transform 0.3s ease, color 0.3s ease;
 }
