--- a/src/components/Sections/Lessons/Lessons.module.scss
+++ b/src/components/Sections/Lessons/Lessons.module.scss
@@ -106,6 +106,8 @@
   font-size: 1.2rem;
   color: var(--pink-color);
   margin-bottom: 0.5rem;
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+
   /* line-height: 1; */
 
   @media screen and (min-width: $breakpoint-mobile-large) {
@@ -136,6 +138,7 @@
 .lessonSubtitle {
   font-size: 1rem;
   margin-bottom: 1rem;
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 
   @media screen and (min-width: $breakpoint-tablet) {
     /* font-size: 1.2rem; */
