--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
   left: 0;
   right: 0;
   width: 100%;
-  padding: 0 1rem;
+  padding: 0.1rem 1rem;
   background-color: var(--header-bg);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
   z-index: 2;
@@ -76,6 +76,7 @@
 
   @media screen and (min-width: $breakpoint-tablet) {
     font-size: 1.2rem;
+    margin-bottom: 0;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
