--- a/src/components/Sections/Testimonials/Testimonials.module.scss
+++ b/src/components/Sections/Testimonials/Testimonials.module.scss
@@ -197,7 +197,7 @@
   }
 
   @media screen and (min-width: $breakpoint-laptop) {
-    flex-direction: row;
+    flex-direction: row !important;
     gap: 3rem;
     border-radius: 10px;
     padding: 2rem;
