--- a/src/components/Sections/Testimonials/Testimonials.module.scss
+++ b/src/components/Sections/Testimonials/Testimonials.module.scss
@@ -143,7 +143,9 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  margin-top: 1.5rem;
   margin-bottom: 2rem;
+
 
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
