--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -19,14 +19,14 @@
   font-size: 28px;
   font-weight: bold;
   text-align: center;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  color: var(--pink-color);
 }
 
 .pageSubtitle {
   display: flex;
   gap: 0.3rem;
   margin-bottom: 0.5rem;
-  font-size: 20px;
+  font-size: 1.2rem;
   color: var(--accent-color);
 }
 
