--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -19,10 +19,12 @@
     text-align: left;
 
     .feature {
+      max-width: 800px;
       background-color: var(--white-color);
       padding: 1rem;
       border-radius: 12px;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+      border: 3px solid var(--pink-color);
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 
       @media screen and (min-width: $breakpoint-tablet) {
         padding: 2rem;
@@ -85,6 +87,10 @@
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
   }
+}
+
+.feature:hover .icon{
+  transform: scale(1.5);  
 }
 
 .icon {
