--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -13,20 +13,21 @@
 }
 
 .card {
+  max-width: 800px;
   margin-bottom: 36px;
   padding: 24px;
   border-radius: 12px;
   background-color: var(--white-color);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border: 3px solid var(--pink-color);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   text-align: left;
-  transition: transform 0.3s ease, color 0.3s ease;
 }
 
 .card h3 {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
   font-size: 1rem;
   color: var(--pink-color);
 
@@ -36,7 +37,7 @@
 }
 
 .card p {
-  margin-bottom: 1rem;
+  margin-bottom: 1.8rem;
   font-size: 1rem;
 
   @media screen and (min-width: $breakpoint-tablet) {
