--- a/src/components/Sections/Lessons/Lessons.module.scss
+++ b/src/components/Sections/Lessons/Lessons.module.scss
@@ -103,17 +103,18 @@
 
 .lessonTitle {
   width: 100%;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: var(--pink-color);
   margin-bottom: 0.5rem;
-  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  letter-spacing: 1.3;
+  // text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 
   @media screen and (min-width: $breakpoint-mobile-large) {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
@@ -136,7 +137,6 @@
 .lessonSubtitle {
   font-size: 1rem;
   margin-bottom: 1rem;
-  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 
   @media screen and (min-width: $breakpoint-tablet) {
   }
