--- a/src/components/Sections/Testimonials/Testimonials.module.scss
+++ b/src/components/Sections/Testimonials/Testimonials.module.scss
@@ -187,7 +187,8 @@
   padding: 1rem 0.8rem 2rem;
   background: white;
   border-radius: 140px 140px 10px 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border: 3px solid var(--pink-color);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
   @media screen and (min-width: $breakpoint-mobile-large) {
     margin: 0 auto;
