--- a/src/components/UI/LinkButton/LinkButton.module.scss
+++ b/src/components/UI/LinkButton/LinkButton.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 0.7rem;
   min-width: 240px;
-  width:fit-content;
+  width: fit-content;
 
   font-size: 1rem;
   font-weight: 600;
@@ -15,19 +15,15 @@
 
   border: none;
   border-radius: 8px;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15), -4px -4px 10px rgba(255, 255, 255, 1);
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15),
+    -4px -4px 10px rgba(255, 255, 255, 1);
 
-
-
-  
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 
   @media screen and (min-width: $breakpoint-tablet) {
     font-size: 1.1rem;
-    text-shadow: none;
   }
-
 
   @media screen and (min-width: $breakpoint-desktop) {
     font-size: 1.2rem;
@@ -38,7 +34,8 @@
   background-color: var(--main-bg);
   color: var(--pink-color);
   border: 3px solid var(--pink-color);
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2), -2px -2px 8px rgba(255, 255, 255, 0.8);
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2),
+    -2px -2px 8px rgba(255, 255, 255, 0.8);
 }
 
 .button:focus {
@@ -56,15 +53,17 @@
   background-color: var(--main-bg);
   color: var(--pink-color);
   border: 3px solid var(--pink-color);
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1), -4px -4px 10px rgba(255, 255, 255, 0.8);
-  
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1),
+    -4px -4px 10px rgba(255, 255, 255, 0.8);
+
   transition: all 0.3s ease-in-out;
 
   &:hover {
     background-color: var(--pink-color);
     color: var(--main-bg);
     border-color: var(--pink-color);
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.15), -2px -2px 8px rgba(255, 255, 255, 0.8);
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.15),
+      -2px -2px 8px rgba(255, 255, 255, 0.8);
   }
 
   &:focus {
@@ -93,6 +92,7 @@
   }
 
   &:hover {
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2), -2px -2px 10px rgba(255, 255, 255, 0.8);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2),
+      -2px -2px 10px rgba(255, 255, 255, 0.8);
   }
 }
