--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 
 :root {
-  --header-bg: #d97e9f;
+  --header-bg: #db7198; // #d97e9f cf6c91 db7198
 
   --footer-bg: #fdf8ee;
   --main-bg: #fdf8ee;
@@ -10,13 +10,13 @@
   --text-color-light: #fdf8ee;
   --card-bg: #f4ead6;
 
-  --pink-color: #d97e9f;
+  --pink-color: #db7198;
   --brown-color: #733c30;
   --mint-color: #a5d8c2;
   --creamy-color: #f2e8b6;
   --beige-color: #d9bca3;
   --blue-color: #6f9abf;
-  --light-color: #f9f9f9;
+  --light-color: #0a0909;
   --white-color: #ffffff;
 
   --breakpoint-mobile: 320px;
