--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -17,6 +17,10 @@
     display: grid;
     gap: 20px;
     text-align: left;
+    margin: 0 auto;
+    max-width: 90%;
+    margin: 0 auto;
+
 
     .feature {
       max-width: 800px;
