--- a/src/components/Sections/Testimonials/Testimonials.module.scss
+++ b/src/components/Sections/Testimonials/Testimonials.module.scss
@@ -185,9 +185,9 @@
   justify-content: space-between;
   height: 100%;
   padding: 1rem 0.8rem 2rem;
-  background: white;
+  background: var(--white-color);
   border-radius: 140px 140px 10px 10px;
-  border: 3px solid var(--pink-color);
+  border: 2px solid var(--pink-color);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
   @media screen and (min-width: $breakpoint-mobile-large) {
