--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,10 +4,13 @@
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: calc(100vh - 95px);
-  padding-top: 48px;
-  background: rgba(255, 255, 255, 0.1) url("/assets/images/bg.png") no-repeat
-    center center/cover;
-  background-color: var(--main-bg);
+  // padding-top: 48px;
+
+  // background-color: var(--main-bg);
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8));
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .intro {
@@ -17,11 +20,20 @@
 }
 
 .pageTitle {
+  font-family: Montserrat-Bold, sans-serif;
   margin-bottom: 20px;
   font-size: 28px;
-  font-weight: bold;
   text-align: center;
   color: var(--pink-color);
+  text-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    font-size: 36px;
+  }
+
+  @media screen and (min-width: $breakpoint-desktop) {
+    font-size: 48px;
+  }
 }
 
 .pageSubtitle {
@@ -41,7 +53,10 @@
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: calc(100vh - 95px);
-  background-color: var(--white-color);
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05)), url("/assets/images/wall.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  // background-color: var(--white-color);
 }
 
 .main {
@@ -72,4 +87,23 @@
 
 .card:hover .icon {
   transform: scale(1.5);
+}
+
+.buttonWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+
+  margin-bottom: 5rem;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    flex-direction: row;
+  }
+}
+
+.whiteBackground {
+  background-color: var(--white-color);
+
 }
