--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -5,47 +5,70 @@
   text-align: center;
 
   .container {
-    max-width: 90%;
     margin: 0 auto;
 
-    @media screen and (min-width: $breakpoint-tablet) {
-      max-width: 80%;
-    }
+    @media screen and (min-width: $breakpoint-tablet) {}
   }
 
   .features {
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
     text-align: left;
-    margin: 0 auto;
-    max-width: 90%;
     margin: 0 auto;
 
 
     .feature {
-      max-width: 800px;
       background-color: var(--white-color);
       padding: 1rem;
       border-radius: 12px;
-      border: 3px solid var(--pink-color);
+      border: 2px solid var(--pink-color);
       box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+      flex-basis: 100%;
+      transform-origin: center;
+      transition: transform 0.5s ease, box-shadow 0.3s ease;
 
       @media screen and (min-width: $breakpoint-tablet) {
         padding: 2rem;
+        flex-basis: 40%;
+        font-size: 1.2;
+      }
+
+      @media screen and (min-width: $breakpoint-desktop) {
+        flex-basis: 30%;
       }
 
       h3 {
         display: flex;
         align-items: center;
-        gap: 0.5rem;
+        gap: 1rem;
         margin-bottom: 8px;
         color: var(--pink-color);
-        font-size: 20px;
+        font-size: 18px;
+
+        @media screen and (min-width: $breakpoint-tablet) {
+          font-size: 20px;
+        }
+
+        @media screen and (min-width: $breakpoint-desktop) {
+          font-size: 22px;
+        }
+
       }
 
       p {
         font-size: 16px;
         line-height: 1.6;
+
+        @media screen and (min-width: $breakpoint-tablet) {
+          font-size: 18px;
+
+        }
+
+        @media screen and (min-width: $breakpoint-desktop) {
+          font-size: 20px;
+        }
       }
 
       ul {
@@ -93,13 +116,28 @@
   }
 }
 
-.feature:hover .icon{
-  transform: scale(1.5);  
+.feature:hover .icon {
+  transform: scale(2);
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    transform: scale(1);
+  }
+}
+
+.feature:hover {
+  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+  transform-origin: center;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    transform: scale(1.05);
+    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+    transform-origin: center;
+  }
 }
 
 .icon {
   vertical-align: text-bottom;
-  font-size: 2rem;
+  font-size: 3rem;
   color: var(--pink-color);
   transition: transform 0.3s ease, color 0.3s ease;
 }
