--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,35 +1,36 @@
 @import "../../styles/variables.scss";
 
 .container {
-  width: $breakpoint-mobile;
+  max-width: $breakpoint-mobile;
   margin: 0 auto;
-  padding: 0 8px;
+  padding: 8px;
 
   @media screen and (min-width: $breakpoint-mobile-large) {
-    width: $breakpoint-mobile-large;
-    padding: 0 16px;
+    max-width: calc($breakpoint-mobile-large - 16px);
+    padding: 16px;
   }
 
   @media screen and (min-width: $breakpoint-tablet) {
-    width: $breakpoint-tablet;
-    padding: 0 24px;
+    max-width: calc($breakpoint-tablet - 24px);
+    padding: 24px;
   }
 
   @media screen and (min-width: $breakpoint-laptop) {
-    width: $breakpoint-laptop;
-    padding: 0 36px;
+    max-width: calc($breakpoint-laptop - 36px);
+    padding: 36px;
   }
 
   @media screen and (min-width: $breakpoint-laptop-large) {
-    width: $breakpoint-laptop-large;
-    padding: 0 48px;
+    max-width: calc($breakpoint-laptop-large - 48px);
+    padding: 48px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    width: $breakpoint-desktop;
-    padding: 0 64px;
+    max-width: calc($breakpoint-desktop - 300px);
+    padding: 64px;
   }
 }
+
 
 .containerWithoutPadding {
   min-width: 100%;
