--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -4,7 +4,7 @@
   max-width: 90%;
   margin: 0 auto;
   padding: 0 20px 20px;
-  background-color: var(--main-bg);
+  // background-color: var(--main-bg);
   text-align: center;
 
   @media screen and (min-width: $breakpoint-tablet) {
@@ -19,7 +19,7 @@
   border-radius: 12px;
   background-color: var(--white-color);
   border: 2px solid var(--pink-color);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   text-align: left;
 }
 
