--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -1,5 +1,9 @@
 @import "../../styles/variables.scss";
 
+.testimonials {
+  margin-bottom: 3rem;
+}
+
 .masonryGrid {
   display: flex;
   width: 100%;
@@ -9,8 +13,9 @@
 .testimonial {
   background: white;
   padding: 24px;
+  padding-bottom: 3rem;
   border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
   margin-bottom: 24px;
   margin-right: 12px;
@@ -74,4 +79,17 @@
 
 .delimiter {
   display: block;
+}
+
+.buttonWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 2rem;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    flex-direction: row;
+  }
 }
