--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -110,18 +110,18 @@ img {
 }
 
 .section {
-  padding: 32px 0;
+  // padding: 32px 0;
   display: flex;
   flex-direction: column;
   gap: 16px;
 
   @media screen and (min-width: $breakpoint-tablet) {
     display: block;
-    padding: 64px 0;
+    // padding: 64px 0;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    padding: 64px 0;
+    // padding: 64px 0;
   }
 }
 
@@ -138,13 +138,13 @@ img {
   margin: -1px;
 }
 
-.section:nth-child(even) {
-  background-color: var(--main-bg);
-}
+// .section:nth-child(even) {
+//   background-color: var(--main-bg);
+// }
 
-.section:nth-child(odd) {
-  background-color: var(--white-color);
-}
+// .section:nth-child(odd) {
+//   background-color: var(--white-color);
+// }
 
 .section.accent {
   background-color: var(--main-bg);
@@ -160,8 +160,7 @@ img {
   justify-content: center;
   height: calc(100vh - 84px);
   text-align: center;
-  background: rgba(255, 255, 255, 0.9) url("/assets/images/404.png") no-repeat
-    center center/cover;
+  background: rgba(255, 255, 255, 0.9) url("/assets/images/404.png") no-repeat center center/cover;
 
   background-color: var(--main-bg);
 }
@@ -177,7 +176,7 @@ img {
   z-index: 1;
 }
 
-.notFound > * {
+.notFound>* {
   position: relative;
   z-index: 2;
 }
@@ -224,4 +223,8 @@ img {
   @media screen and (min-width: 1024px) {
     flex-direction: row !important;
   }
+}
+
+.whiteBackground {
+  background-color: var(--white-color);
 }
