--- a/src/components/Sections/Hero/Hero.module.scss
+++ b/src/components/Sections/Hero/Hero.module.scss
@@ -44,7 +44,7 @@
   position: absolute;
   width: 8px;
   height: 8px;
-  background-color: var(--creamy-color);
+  background-color: var(--white-color);
   border-radius: 50%;
   animation: sparkFly 1s ease-out;
   pointer-events: none;
