--- a/src/app/notFound.module.scss
+++ b/src/app/notFound.module.scss
@@ -1,4 +1,4 @@
-@import "../styles/variables.scss";
+@use "../styles/variables" as *;
 
 .notFound {
   display: flex;
@@ -30,5 +30,6 @@
 
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
+    gap: 2rem;
   }
 }
