--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@use "../../styles/variables.scss" as *;
 
 .about {
   background-color: var(--bg-color);
@@ -113,6 +113,7 @@
 
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
+    gap: 2rem;
   }
 }
 
