--- a/src/components/Sections/Features/Features.module.scss
+++ b/src/components/Sections/Features/Features.module.scss
@@ -1,6 +1,19 @@
-@import "../../../styles/variables.scss";
+@use "../../../styles/variables.scss" as *;
 
 .features {
+  min-height: 800px;
+  background: url("/assets/images/features-mobile.jpg") no-repeat center center/cover;
+  background-color: var(--white-color);
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    height: 768px;
+    background: url("/assets/images/features-tablet.jpg") no-repeat center center/cover;
+  }
+
+  @media screen and (min-width: $breakpoint-desktop) {
+    background: url("/assets/images/features-desktop.jpg") no-repeat center center/cover;
+    height: 1024px;
+  }
 }
 
 .titleHidden {
@@ -17,122 +30,131 @@
 }
 
 .featuresList {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  padding: 0 1rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
+  row-gap: 16px;
+  column-gap: 20px;
   margin-bottom: 24px;
-  font-size: 1rem;
+  width: 100%;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 2rem;
-
-    width: 95%;
-    margin: 0 auto 3rem;
-    padding: 0 2rem;
-
-    font-size: 1.1rem;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 30px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.5rem;
-    gap: 3rem;
     margin-bottom: 4rem;
   }
 }
 
 .featuresList li {
-  position: relative;
-
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
 
-  min-height: 100px;
-  padding: 0 1rem 1rem;
-  border: 1px solid var(--pink-color);
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  min-height: 48px;
+  padding: 0.3rem 1rem;
+  border: 3px solid var(--white-color);
+  border-radius: 50px;
 
-  background-color: var(--main-bg);
+  backdrop-filter: blur(8px);
+  background: rgba(255, 255, 255, 0.7);
+
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--text-color);
+
   text-align: center;
-}
 
-@media screen and (min-width: $breakpoint-mobile-large) {
-  .featuresList li {
-    width: 80%;
-    margin: 0 auto;
-  }
-}
-
-@media screen and (min-width: $breakpoint-tablet) {
-  .featuresList li {
-    width: calc(33% - 2rem);
-    margin-bottom: 2rem;
-  }
-}
-
-@media screen and (min-width: $breakpoint-laptop-large) {
-  .featuresList li {
-    width: calc(33% - 2rem);
-    padding: 0 2rem 2rem;
-  }
-}
-
-.featuresList li::before {
-  content: "";
-  position: absolute;
-  top: -1px;
-  left: 50%;
-  width: 15%;
-  height: 1px;
-  background-color: var(--main-bg);
-  transform: translateX(-50%);
 
   @media screen and (min-width: $breakpoint-tablet) {
-    width: 25%;
+    min-height: 80px;
+    padding: 1rem 1.5rem;
+    font-size: 18px;
+  }
+
+
+  @media screen and (min-width: $breakpoint-desktop) {
+    font-size: 21px;
   }
 }
 
-.icon {
-  width: 24px;
-  height: 24px;
-  display: inline-block;
-  vertical-align: middle;
-  flex-shrink: 0;
-  align-self: center;
-
-  position: relative;
-  top: -0.8rem;
+.featuresList li:nth-child(1) {
+  justify-self: start;
+  width: 75%;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    top: -1rem;
-
-    width: 28px;
-    height: 28px;
-  }
-
-  @media screen and (min-width: $breakpoint-laptop) {
-    width: 32px;
-    height: 32px;
-  }
-
-  @media screen and (min-width: $breakpoint-laptop-large) {
-    width: 36px;
-    height: 36px;
+    justify-self: start;
+    width: 95%;
   }
 }
 
-.buttonWrapper {
+.featuresList li:nth-child(2) {
+  justify-self: end;
+  width: 75%;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    justify-self: end;
+    width: 95%;
+
+  }
+}
+
+.featuresList li:nth-child(3) {
+  justify-self: start;
+  width: 75%;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    grid-column: 1 / -1;
+    justify-self: center;
+    width: 50%;
+  }
+}
+
+.featuresList li:nth-child(4) {
+  justify-self: end;
+  width: 75%;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    justify-self: start;
+    width: 95%;
+  }
+}
+
+.featuresList li:nth-child(5) {
+  justify-self: start;
+  width: 75%;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    justify-self: end;
+    width: 95%;
+  }
+}
+
+.featuresList li:nth-child(6) {
+  justify-self: end;
+  width: 75%;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    grid-column: 1 / -1;
+    justify-self: center;
+    width: 50%;
+  }
+}
+
+.btnWrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
+
+  margin-top: auto !important;
+  margin-bottom: 0;
 
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
+    gap: 3rem;
   }
 }
