--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@use "../../styles/variables.scss" as *;
 
 .testimonials {
   margin-bottom: 3rem;
@@ -91,5 +91,6 @@
 
   @media screen and (min-width: $breakpoint-tablet) {
     flex-direction: row;
+    gap: 2rem;
   }
 }
