--- a/src/components/UI/LinkButton/LinkButton.module.scss
+++ b/src/components/UI/LinkButton/LinkButton.module.scss
@@ -1,11 +1,11 @@
-@import "../../../styles/variables.scss";
+@use "../../../styles/variables.scss" as *;
 
 .button {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 0.8rem;
+  padding: 1rem 2rem;
 
   font-size: 1rem;
   font-weight: 600;
@@ -13,10 +13,8 @@
   text-align: center;
 
   border: none;
-  border-radius: 25px;
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15),
-    -4px -4px 10px rgba(255, 255, 255, 1);
-
+  border-radius: 16px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 
@@ -25,11 +23,10 @@
   }
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1.2rem;
   }
   
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     width: 400px;
   }
 }
@@ -38,9 +35,7 @@
   background-color: var(--main-bg);
   color: var(--pink-color);
   border: 2px solid var(--pink-color);
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2),
-    -2px -2px 8px rgba(255, 255, 255, 0.8);
-}
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2)}
 
 .button:focus {
   outline: 2px solid var(--pink-color);
@@ -57,18 +52,14 @@
   background-color: var(--main-bg);
   color: var(--pink-color);
   border: 2px solid var(--pink-color);
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1),
-    -4px -4px 10px rgba(255, 255, 255, 0.8);
-
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease-in-out;
 
   &:hover {
     background-color: var(--pink-color);
     color: var(--main-bg);
     border-color: var(--pink-color);
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.15),
-      -2px -2px 8px rgba(255, 255, 255, 0.8);
-  }
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.15);  }
 
   &:focus {
     outline: 2px solid var(--pink-color);
