--- a/src/components/UI/ProgressBar/ProgressBar.module.scss
+++ b/src/components/UI/ProgressBar/ProgressBar.module.scss
@@ -11,6 +11,8 @@
 .progressBar {
   height: 100%;
   background-color: var(--mint-color);
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
   position: relative;
   margin-bottom: 5px;
 }
