--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,7 @@
-@import "./variables.scss";
+@use "./variables.scss" as *;
 
 :root {
-  --header-bg: #db7198; // #d97e9f cf6c91 db7198
+  --header-bg: #d97e9f; // #d97e9f cf6c91 db7198  #F1D5D2
 
   --footer-bg: #fdf8ee;
   --main-bg: #fdf8ee;
@@ -10,7 +10,7 @@
   --text-color-light: #fdf8ee;
   --card-bg: #f4ead6;
 
-  --pink-color: #db7198;
+  --pink-color: #d97e9f;
   --brown-color: #733c30;
   --mint-color: #a5d8c2;
   --creamy-color: #f2e8b6;
