--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -30,7 +30,7 @@
       transition: transform 0.5s ease, box-shadow 0.3s ease;
 
       @media screen and (min-width: $breakpoint-tablet) {
-        padding: 2rem;
+        padding: 1.2rem;
         flex-basis: 40%;
         font-size: 1.2;
       }
@@ -42,8 +42,9 @@
       h3 {
         display: flex;
         align-items: center;
+        flex-direction: column;
         gap: 1rem;
-        margin-bottom: 8px;
+        margin-bottom: 16px;
         color: var(--pink-color);
         font-size: 18px;
 
@@ -52,7 +53,9 @@
         }
 
         @media screen and (min-width: $breakpoint-desktop) {
+          flex-direction: row;
           font-size: 22px;
+          text-align: left;
         }
 
       }
@@ -62,17 +65,17 @@
         line-height: 1.6;
 
         @media screen and (min-width: $breakpoint-tablet) {
-          font-size: 18px;
+          // font-size: 18px;
 
         }
 
         @media screen and (min-width: $breakpoint-desktop) {
-          font-size: 20px;
+          // font-size: 20px;
         }
       }
 
       ul {
-        padding-left: 20px;
+        padding-left: 8px;
         margin-top: 8px;
 
         li {
@@ -118,11 +121,7 @@
 }
 
 .feature:hover .icon {
-  transform: scale(2);
-
-  @media screen and (min-width: $breakpoint-tablet) {
-    transform: scale(1);
-  }
+  transform: scale(1.2);
 }
 
 .feature:hover {
@@ -130,7 +129,6 @@
   transform-origin: center;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    transform: scale(1.05);
     box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
     transform-origin: center;
   }
@@ -141,6 +139,26 @@
   font-size: 3rem;
   color: var(--pink-color);
   transition: transform 0.3s ease, color 0.3s ease;
+
+
+  @media screen and (min-width: $breakpoint-tablet) {}
+}
+
+.iconWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 50%;
+  border: 1px solid var(--pink-color);
+  backdrop-filter: blur(8px);
+  background: var(--main-bg);
+  box-shadow:
+    4px 4px 8px rgba(0, 0, 0, 0.1),
+    -8px -8px 16px rgba(255, 255, 255, 0.9),
+    inset 4px 4px 12px rgba(255, 255, 255, 0.8),
+    inset -4px -4px 12px rgba(0, 0, 0, 0.1);
+
 }
 
 .smallIcon {
