--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -66,15 +66,31 @@
 }
 
 .icon {
-  margin-right: 0.5rem;
   font-size: 2rem;
   color: var(--pink-color);
   transition: transform 0.3s ease, color 0.3s ease;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    margin-right: 1rem;
     font-size: 2.5rem;
   }
+}
+
+
+.iconWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 50%;
+  border: 1px solid var(--pink-color);
+  backdrop-filter: blur(8px);
+  background: var(--main-bg);
+  box-shadow:
+    4px 4px 8px rgba(0, 0, 0, 0.1),
+    -8px -8px 16px rgba(255, 255, 255, 0.9),
+    inset 4px 4px 12px rgba(255, 255, 255, 0.8),
+    inset -4px -4px 12px rgba(0, 0, 0, 0.1);
+
 }
 
 .card:hover .icon {
