--- a/src/components/Sections/Lessons/Lessons.module.scss
+++ b/src/components/Sections/Lessons/Lessons.module.scss
@@ -79,16 +79,8 @@
   }
 }
 
-.lessonItem:hover {
-  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
-  transform-origin: center;
-  z-index: 1;
-
-  @media screen and (min-width: $breakpoint-tablet) {
-    transform: scale(1.05);
-    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
-    transform-origin: center;
-  }
+.lessonItem:hover .icon {
+  transform: scale(1.3);
 }
 
 .lessonHeader {
@@ -97,14 +89,40 @@
   justify-content: center;
   align-items: center;
   min-height: 100px;
-  padding: 0.3rem;
-  margin-bottom: 12px;
+  padding: 1rem;
 
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
   @media screen and (min-width: $breakpoint-tablet) {}
 
   @media screen and (min-width: $breakpoint-desktop) {}
+}
+
+.icon {
+  vertical-align: text-bottom;
+  font-size: 3rem;
+  color: var(--pink-color);
+  transition: transform 0.3s ease, color 0.3s ease;
+
+
+  @media screen and (min-width: $breakpoint-tablet) {}
+}
+
+.iconWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.2rem;
+  margin-bottom: 20px;
+  border-radius: 50%;
+  border: 1px solid var(--pink-color);
+  backdrop-filter: blur(8px);
+  background: var(--main-bg);
+  box-shadow:
+    4px 4px 8px rgba(0, 0, 0, 0.1),
+    -8px -8px 16px rgba(255, 255, 255, 0.9),
+    inset 4px 4px 12px rgba(255, 255, 255, 0.8),
+    inset -4px -4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .lessonTitle {
@@ -142,7 +160,6 @@
 
 .lessonSubtitle {
   font-size: 1rem;
-  margin-bottom: 1rem;
 
   @media screen and (min-width: $breakpoint-tablet) {}
 
