--- a/src/components/Sections/Sasha/Sasha.module.scss
+++ b/src/components/Sections/Sasha/Sasha.module.scss
@@ -73,6 +73,9 @@
   @media screen and (min-width: $breakpoint-tablet) {
     display: block;
   }
+
+
+
 }
 
 .infoWrapper p {
@@ -119,16 +122,15 @@
 
   @media screen and (min-width: $breakpoint-tablet) {
     font-size: 1.1rem;
-    padding: 0.8rem 0 0.8rem;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
     font-size: 1.3rem;
-    padding: 1.2rem 0 1.2rem;
   }
 }
 
-.description li:first-child {
+.description li:first-child,
+.descriptionDesktop li:first-child {
   border-top: 1px solid var(--pink-color);
 }
 
@@ -143,41 +145,30 @@
   }
 }
 
-.icon {
-  width: 30px;
-  height: 30px;
-  display: inline-block;
-  vertical-align: middle;
+.icon,
+.descriptionDesktop.icon {
+  width: 36px;
+  height: 36px;
+  display: block;
   flex-shrink: 0;
-  padding: 5px;
+}
 
-  @media screen and (min-width: $breakpoint-tablet) {
-    width: 36px;
-    height: 36px;
-  }
 
-  @media screen and (min-width: $breakpoint-laptop) {
-    width: 48px;
-    height: 48px;
-  }
+.customIconWrapper,
+.descriptionDesktop.customIconWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  border: 1px solid var(--pink-color);
+  backdrop-filter: blur(8px);
 
-  @media screen and (min-width: $breakpoint-laptop-large) {
-    width: 64px;
-    height: 64px;
+  box-shadow:
+    4px 4px 8px rgba(0, 0, 0, 0.1),
+    -8px -8px 16px rgba(255, 255, 255, 0.9),
+    inset 2px 2px 5px rgba(0, 0, 0, 0.1),
+    inset -2px -2px 10px rgba(0, 0, 0, 0.1);
 
-    .question {
-      border: 4px solid var(--blue-color);
-      border-radius: 50%;
-    }
-
-    .icon.check {
-      border: 4px solid var(--pink-color);
-      border-radius: 50%;
-    }
-
-    .icon.arrow {
-      border: 4px solid var(--mint-color);
-      border-radius: 50%;
-    }
-  }
 }
