--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -30,7 +30,6 @@
 .testimonialPhoto {
   width: 150px;
   height: 150px;
-  margin: 0 auto 0.5rem;
   border-radius: 50%;
   object-fit: cover;
 
@@ -38,6 +37,25 @@
     width: 160px;
     height: 160px;
   }
+}
+
+.testimonialPhotoWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  padding: 1.5rem;
+  margin: 0 auto 0.5rem;
+  border-radius: 50%;
+  // border: 2px solid var(--pink-color);
+  backdrop-filter: blur(8px);
+  background: var(--main-bg);
+  box-shadow:
+    4px 4px 8px rgba(0, 0, 0, 0.1),
+    -8px -8px 16px rgba(255, 255, 255, 0.9),
+    inset 4px 4px 12px rgba(0, 0, 0, 0.1),
+    inset -4px -4px 12px rgba(0, 0, 0, 0.1);
+
 }
 
 .testimonialInfoWrapper {
