--- a/src/components/UI/LinkButton/LinkButton.module.scss
+++ b/src/components/UI/LinkButton/LinkButton.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   padding: 1rem 2rem;
 
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 600;
   letter-spacing: 0.05em;
   text-align: center;
@@ -18,16 +18,23 @@
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 
+  box-shadow:
+    // 2px 2px 8px rgba(0, 0, 0, 0.1),
+    // -2px -2px 8px rgba(0, 0, 0, 0.1),
+    inset 2px 2px 3px rgba(61, 10, 10, 0.1),
+    inset -2px -2px 3px rgba(248, 65, 65, 0.1);
+
   @media screen and (min-width: $breakpoint-mobile-large) {
     width: 320px;
   }
 
   @media screen and (min-width: $breakpoint-tablet) {
-  }
-  
-  @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 1.3rem;
     width: 400px;
+    font-size: 20px;
+  }
+
+  @media screen and (min-width: $breakpoint-desktop) {
+    font-size: 24px;
   }
 }
 
@@ -35,7 +42,8 @@
   background-color: var(--main-bg);
   color: var(--pink-color);
   border: 2px solid var(--pink-color);
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2)}
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2)
+}
 
 .button:focus {
   outline: 2px solid var(--pink-color);
@@ -44,22 +52,22 @@
 
 .button.primary {
   background-color: var(--pink-color);
-  border: 2px solid var(--pink-color);
+  border: 3px solid transparent;
   color: var(--main-bg);
 }
 
 .button.secondary {
   background-color: var(--main-bg);
   color: var(--pink-color);
-  border: 2px solid var(--pink-color);
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+  border: 3px solid var(--pink-color);
   transition: all 0.3s ease-in-out;
 
   &:hover {
     background-color: var(--pink-color);
     color: var(--main-bg);
     border-color: var(--pink-color);
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.15);  }
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.15);
+  }
 
   &:focus {
     outline: 2px solid var(--pink-color);
