--- a/src/components/UI/ProgressBar/ProgressBar.module.scss
+++ b/src/components/UI/ProgressBar/ProgressBar.module.scss
@@ -1,7 +1,7 @@
 .progressContainer {
   position: relative;
   width: 100%;
-  height: 16px;
+  height: 30px;
   margin-top: 1rem;
   background-color: transparent;
   border: 2px solid var(--mint-color);
@@ -11,10 +11,16 @@
 .progressBar {
   height: 100%;
   background-color: var(--mint-color);
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
   position: relative;
   margin-bottom: 5px;
+
+  box-shadow:
+      // 2px 2px 8px rgba(0, 0, 0, 0.1),
+      // -2px -2px 8px rgba(0, 0, 0, 0.1),
+      inset 3px 3px 6px rgba(11, 45, 7, 0.1),
+      inset -3px -3px 6px rgba(19, 71, 27, 0.159);
 }
 
 .levels {
@@ -41,7 +47,7 @@
 .initialIndicator {
   position: absolute;
   top: -2px;
-  height: 16px;
+  height: 30px;
   width: 5px;
   background-color: var(--pink-color);
   transform: translateX(-50%);
