--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: calc(100vh - 95px);
-  // padding-top: 48px;
+  padding: 48px 0;
 
   // background-color: var(--main-bg);
   // background: linear-gradient(0deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8));
@@ -15,25 +15,23 @@
 }
 
 .intro {
-  margin-bottom: 40px;
-  padding: 0 20px;
+  padding: 0 0 20px;
   border-radius: 12px;
 }
 
 .pageTitle {
   font-family: Montserrat-Bold, sans-serif;
   margin-bottom: 20px;
-  font-size: 28px;
+  font-size: 20px;
   text-align: center;
-  color: var(--pink-color);
   text-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 36px;
+    font-size: 24px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 48px;
+    font-size: 36px;
   }
 }
 
@@ -41,7 +39,7 @@
   display: flex;
   gap: 0.3rem;
   margin-bottom: 0.5rem;
-  font-size: 1.2rem;
+  font-size: 18px;
   color: var(--accent-color);
 }
 
