--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,6 +1,6 @@
 @use "../../styles/variables.scss" as *;
 
-.container {
+.mainContainer {
   max-width: $breakpoint-mobile;
   height: 100%;
   margin: 0 auto;
@@ -34,6 +34,42 @@
   @media screen and (min-width: $breakpoint-desktop) {
     min-width: calc($breakpoint-desktop - 96px);
     padding: 96px 48px;
+  }
+}
+
+.container {
+  max-width: $breakpoint-mobile;
+  height: 100%;
+  margin: 0 auto;
+  padding: 0 8px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  @media screen and (min-width: $breakpoint-mobile-large) {
+    min-width: calc($breakpoint-mobile-large - 16px);
+    padding: 0 16px;
+  }
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    min-width: calc($breakpoint-tablet - 21px);
+    padding: 0 21px;
+  }
+
+  @media screen and (min-width: $breakpoint-laptop) {
+    min-width: calc($breakpoint-laptop - 24px);
+    padding: 0 24px;
+  }
+
+  @media screen and (min-width: $breakpoint-laptop-large) {
+    min-width: calc($breakpoint-laptop-large - 36px);
+    padding: 0 36px;
+  }
+
+  @media screen and (min-width: $breakpoint-desktop) {
+    min-width: calc($breakpoint-desktop - 96px);
+    padding: 0 48px;
   }
 }
 
