--- a/src/components/Sections/Lessons/Lessons.module.scss
+++ b/src/components/Sections/Lessons/Lessons.module.scss
@@ -22,7 +22,7 @@
   gap: 2rem;
 
   margin: 0 auto 24px;
-  padding: 1rem;
+  // padding: 1rem;
   width: 100%;
 
   background: transparent !important;
@@ -55,7 +55,7 @@
   }
 
   @media screen and (min-width: $breakpoint-tablet) {
-    width: calc(50% - 2rem);
+    width: calc(50% - 1rem);
     min-height: 350px;
   }
 
@@ -91,7 +91,7 @@
   min-height: 100px;
   padding: 1rem;
 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
   @media screen and (min-width: $breakpoint-tablet) {}
 
@@ -130,19 +130,13 @@
   font-size: 1rem;
   color: var(--pink-color);
   margin-bottom: 0.5rem;
-  letter-spacing: 1.3;
-  // text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 
-  @media screen and (min-width: $breakpoint-mobile-large) {
+  @media screen and (min-width: $breakpoint-tablet) {
     font-size: 1.2rem;
   }
 
-  @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1.5rem;
-  }
-
   @media screen and (min-width: $breakpoint-desktop) {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -219,7 +213,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
 
-  font-size: 1, 8rem;
+  font-size: 1.8rem;
   color: var(--pink-color);
   line-height: 1;
 }
