--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -1,41 +1,57 @@
 @use "../../styles/variables.scss" as *;
 
 .testimonials {
-  margin-bottom: 3rem;
-}
-
-.masonryGrid {
-  display: flex;
-  width: 100%;
-  justify-content: center;
+  position: relative;
+  overflow: visible;
 }
 
 .testimonial {
+  max-width: 800px;
   background: white;
+  margin: 0 auto 24px;
   padding: 24px;
-  padding-bottom: 3rem;
   border-radius: 10px;
+  border: 1px solid var(--pink-color);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
-  margin-bottom: 24px;
-  margin-right: 12px;
-  margin-left: 12px;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    position: sticky;
+    top: 80px;
+
+    min-height: 80vh;
+    padding: 28px;
+    margin-bottom: 100px;
+
+
+    &:not(:first-child) {
+      box-shadow: none;
+    }
+  }
 }
 
 .testimonialHeader {
   margin-bottom: 1rem;
   text-align: center;
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    text-align: left;
+  }
 }
 
 .testimonialPhoto {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   object-fit: cover;
 
   @media screen and (min-width: $breakpoint-tablet) {
-    width: 160px;
-    height: 160px;
+    width: 120px;
+    height: 120px;
   }
 }
 
@@ -43,8 +59,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: fit-content;
-  padding: 1.5rem;
+  max-width: fit-content;
+  padding: 1rem;
   margin: 0 auto 0.5rem;
   border-radius: 50%;
   // border: 2px solid var(--pink-color);
@@ -56,13 +72,17 @@
     inset 4px 4px 12px rgba(0, 0, 0, 0.1),
     inset -4px -4px 12px rgba(0, 0, 0, 0.1);
 
+  @media screen and (min-width: $breakpoint-tablet) {
+    padding: 1.5rem;
+    flex-grow: 1;
+  }
+
 }
 
 .testimonialInfoWrapper {
   display: flex;
   flex-direction: column;
   justify-content: spaceBetween;
-
 
 }
 
@@ -75,7 +95,7 @@
   }
 
   @media screen and (min-width: $breakpoint-tablet) {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 }
 
@@ -93,6 +113,7 @@
 .testimonialName {
   font-weight: bold;
   margin-bottom: 10px;
+  flex-grow: 1;
 }
 
 .delimiter {
@@ -111,4 +132,8 @@
     flex-direction: row;
     gap: 2rem;
   }
+}
+
+.progressWrapper {
+  margin-top: auto;
 }
