--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -62,12 +62,13 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   font-family: "Montserrat-Regular", sans-serif;
   color: var(--text-color);
+  scroll-behavior: smooth;
 
   @media screen and (max-width: 319px) {
-    overflow: scroll;
+    // overflow: scroll;
   }
 }
 
