--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -19,6 +19,11 @@
   border-radius: 12px;
 }
 
+.section{
+  padding: 40px 0 40px;
+    margin: 40px 0 40px;
+}
+
 .pageTitle {
   font-family: Montserrat-Bold, sans-serif;
   margin-bottom: 20px;
