--- a/src/components/Sections/Features/Features.module.scss
+++ b/src/components/Sections/Features/Features.module.scss
@@ -4,10 +4,18 @@
   min-height: 800px;
   background: url("/assets/images/features-mobile.jpg") no-repeat center center/cover;
   background-color: var(--white-color);
+  margin-top: -32px;
+  margin-bottom: -32px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
   @media screen and (min-width: $breakpoint-tablet) {
     height: 768px;
     background: url("/assets/images/features-tablet.jpg") no-repeat center center/cover;
+    margin-top: -64px;
+    margin-bottom: -64px;
+    padding-top: 64px;
+    padding-bottom: 64px;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
