--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -111,7 +111,7 @@ img {
 }
 
 .section {
-  // padding: 32px 0;
+  padding: 32px 0;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -122,7 +122,7 @@ img {
 
   @media screen and (min-width: $breakpoint-tablet) {
     display: block;
-    // padding: 64px 0;
+    padding: 64px 0;
   }
 
   @media screen and (min-width: $breakpoint-desktop) {
